--- a/index.html
+++ b/index.html
@@ -15,48 +15,109 @@
 </head>
 <body>
     <div class="wrap">
-        <div id="background"></div>
-        <!-- <canvas id="background"></canvas> -->
-        <div id="palette"></div>
-        <div id="btns">
-            <button id="reset">초기화</button>
-            <button id="save">저장</button>
+        <div class="cover">
+            <div id="background"></div>
+            <div id="palette"></div>
+            <div id="btns">
+                <button id="reset">초기화</button>
+                <button id="save">저장</button>
+                <button id="cancle">취소</button>
+            </div>
+        </div>
+        <div class="history">
+            <div class="title">
+                <span>히스토리</span>
+                <button id="undo"><img src="./Img/undo.png" alt="실행 취소" style="width: 25px; height: 25px;"></button>
+            </div>
+            <div class="lists"><ul id="his_List"></ul></div>
         </div>
     </div>
 </body>
 </html>
 <style>
+    *{
+        margin: 0;
+        padding: 0;
+    }
+    li{
+        list-style: none;
+    }
     .wrap{
         position: relative;
         display: flex;
+        height: 100vh;
+        width: 100%;
     }
-    .wrap #background{
+    .wrap .cover{
+        position: absolute;
+        top: 0; left: 0; bottom: 0; right: 0;
+        margin: auto;
+        position: relative;
+        display: flex;
+    }
+    .wrap .cover #background{
         width: 850px;
         height: 850px;
         border: 1px solid black;
         overflow: hidden;
     }
-    .wrap #palette{
+    .wrap .cover #palette{
         width: 100px;
         height: 850px;
         margin-left: 2px;
     }
-    .wrap #palette button{
-        width: 100%;
-        height: 80px;
+    .wrap .cover #palette button{
+        width: 60px;
+        height: 60px;
         display: block;
         background: white;
+        border: 1px solid black;
+        border-radius: 10px;
     }
-    .wrap #palette button:not(:first-child){
+    .wrap .cover #palette button:not(:first-child){
         margin-top: 5px;
     }
-    .wrap #btns{
+    .wrap .history{
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 250px;
+        height: 400px;
+        border: 1px solid black;
+        background: white;
+    }
+    .wrap .history .title{
+        position: relative;
+        width: 100%;
+        height: 40px;
+        text-align: center;
+        background: black;
+        color: white;
+        line-height: 40px;
+        font-size: 20px;
+    }
+    .wrap .history .lists{
+        height: calc(400px - 40px);
+        overflow: scroll;
+        overflow-x: hidden;
+    }
+    .wrap .history .title #undo{
+        position: absolute;
+        width: 30px;
+        height: 30px;
+        right: 0;
+        top: 50%;
+        border: 1px solid white;
+        transform: translateY(-50%);
+        filter: invert(100%);
+    }
+    .wrap .cover #btns{
         position: absolute;
         left: 0;
         bottom: -80px;
     }
-    .wrap #btns button{
-        width: 100px;
-        height: 80px;
+    .wrap .cover #btns button{
+        width: 120px;
+        height: 60px;
     }
 </style>
