--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
-
-    <!-- <script type="text/javascript" src="js/edit.js"></script> -->
+    <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>  -->
+    <!-- 정상 작동 확인 필요 -->
+    
+    <script src="js/extra/jquery.js"></script>
+    <script src="js/extra/axios.js"></script>
     <script type="module" src="js/edit.js"></script>
     <link rel="stylesheet" href="css/index.css">
     <title>SVG Edited</title>
@@ -25,15 +27,23 @@
         <div class="cover">
             <div id="background"></div>
             <div id="palette"></div>
-            <div id="btns"></div>
-        </div>
-        <!-- <div class="history">
-            <div class="title">
-                <span>히스토리</span>
-                <button id="undo"><img src="./Img/undo.png" alt="실행 취소" style="width: 25px; height: 25px;"></button>
+            <div id="btns">
+                <div class="file">
+                    <label for="imgs">파일 선택</label>
+                    <input ref="image" type="file" id="imgs" accept="image/jpg, image/png, image/jpeg">
+                    <button id="compare" disabled>비교하기</button>
+                </div>
             </div>
-            <div class="lists"><ul id="his_List"></ul></div>
-        </div> -->
+        </div>
+    </div>
+    <div class="history">
+        <div class="title">
+            <span>히스토리</span>
+            <button id="undo"><img src="./Img/undo.png" alt="실행 취소" style="width: 25px; height: 25px;"></button>
+        </div>
+        <div class="lists">
+            <ul id="his_List"></ul>
+        </div>
     </div>
 </body>
 </html>
